--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "author": "Gabor Molnar <gabormolnar92@gmail.com>",
   "license": "MIT",
   "description": "Bootstrap for web development",
-  "dependencies": {
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
@@ -18,7 +22,12 @@
     "gulp-prettify": "^0.4.0",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^1.5.4"
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-stream": "^3.2.0"
   },
   "repository": {
     "type": "git",
