--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "babel-preset-stage-2": "^6.17.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-jade": "^1.1.0",
     "gulp-prettify": "^0.4.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.1.1",
