--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-connect": "^2.3.1",
     "gulp-google-webfonts": "0.0.14",
     "gulp-imagemin": "^3.0.3",
+    "gulp-less": "^3.3.0",
     "gulp-modify-css-urls": "^0.2.2",
     "gulp-prettify": "^0.4.0",
     "gulp-pug": "^3.1.0",
