--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
+    "vinyl-named": "^1.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
     "webpack-stream": "^3.2.0"
